--- a/site2.0/html/index.html
+++ b/site2.0/html/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cabin&family=Montserrat:wght@500&display=swap" rel="stylesheet">
-    <link rel="icon" href="../Imagens/Logosite.png">
+    <link rel="icon" href="../Imagens/logosite.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
@@ -76,7 +76,7 @@
   
   <!-- Nossa equipe -->
   <div id="equipe">
-    <h2 style="color: #012030;">Nossa Equipe</h2>
+    <h2 style="color: #012030;" id="tNossaEquipe">Nossa Equipe</h2>
     <div id="card">
       <img id="imagem_card" class="border border-primary">
       <div id="fundo_funcionalidade" class="border border-dark"><p id="funcionalidade"></p></div>
@@ -100,7 +100,7 @@
   
   <!-- Desenvolvedores -->
   <div id="desenvolvedores">
-    <h2 style="color: #012030;">Desenvolvedores</h2>
+    <h2 style="color: #012030;" id="tDesenvolvedores">Desenvolvedores</h2>
     <!---->
     <div id="navegacao">
     <ul id="ul">
@@ -109,8 +109,8 @@
         <img class="card-img-top" src="../Imagens/fotos_desenvolvedores/foto_daniel.jpg" alt="Imagem de capa do card">
         <div class="card-body">
           <h5 class="card-title">Daniel Cardoso</h5>
-          <p class="card-text">-Líder do projeto<br>-Desenvolvedor full stack</p>
-          <a href="https://www.linkedin.com/in/daniel-cardoso-195808263/" class="btn btn-primary">linkedin</a>
+          <p class="card-text">- Líder do projeto<br>- Desenvolvedor full stack</p>
+          <a href="https://www.linkedin.com/in/daniel-cardoso-195808263/" style="font-size: 30px;"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>   
       <br>
@@ -122,8 +122,8 @@
           <img class="card-img-top" src="../Imagens/fotos_desenvolvedores/foto_giovanni.png" alt="Imagem de capa do card">
           <div class="card-body">
             <h5 class="card-title">Giovanni Almeida</h5>
-            <p class="card-text">-Designer<br>-Desenvolvedor full stack</p>
-            <a href="https://www.linkedin.com/in/giovanni-dos-santos-almeida-lombone-rodrigues-607a73209" class="btn btn-primary">linkedin</a>
+            <p class="card-text">- Designer<br>- Desenvolvedor full stack</p>
+            <a href="https://www.linkedin.com/in/giovanni-dos-santos-almeida-lombone-rodrigues-607a73209" style="font-size: 30px;"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>  
         <br>
@@ -135,8 +135,8 @@
           <img class="card-img-top" src="../Imagens/fotos_desenvolvedores/foto_ramon.png" alt="Imagem de capa do card">
           <div class="card-body">
             <h5 class="card-title">Ramon Pereira</h5>
-            <p class="card-text">-Designer<br>-Desenvolvedor front-end</p>
-            <a href="https://www.linkedin.com/in/ramon-pereira-batista-afonso-9aa72b248/" class="btn btn-primary">linkedin</a>
+            <p class="card-text">- Designer<br>- Desenvolvedor front-end</p>
+            <a href="https://www.linkedin.com/in/ramon-pereira-batista-afonso-9aa72b248/" style="font-size: 30px;"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>  
       <br>
@@ -148,9 +148,9 @@
         <img class="card-img-top" src="../Imagens/fotos_desenvolvedores/foto_bernardo.png" alt="Imagem de capa do card">
         <div class="card-body">
           <h5 class="card-title">Bernardo Receputi</h5>
-          <p class="card-text">-QA tester</p>
+          <p class="card-text">- QA tester</p>
           <br>
-          <a href="https://www.linkedin.com/in/bernardo-receputi-da-costa-87304926b/" class="btn btn-primary">linkedin</a>
+          <a href="https://www.linkedin.com/in/bernardo-receputi-da-costa-87304926b/" style="font-size: 30px;"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>  
       <br>
@@ -162,9 +162,9 @@
         <img class="card-img-top" src="../Imagens/fotos_desenvolvedores/foto_vitor.png" alt="Imagem de capa do card">
         <div class="card-body">
           <h5 class="card-title">Vitor Viana</h5>
-          <p class="card-text">-QA tester</p>
+          <p class="card-text">- QA tester</p>
           <br>
-          <a href="https://www.linkedin.com/in/vitor-viana-33604a26b/" class="btn btn-primary">linkedin</a>
+          <a href="https://www.linkedin.com/in/vitor-viana-33604a26b/" style="font-size: 30px;"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>      
       <br>
@@ -177,7 +177,7 @@
   <!-- Pagina quiz -->
   <div id="pagina_quiz">
     <img id="seta_cima" src="../Imagens/icons/seta_cima.png">
-    <h2 style="color: #EBEBEB;">Faça a diferença</h2>
+    <h2 style="color: #EBEBEB;" id="tFacaDiferenca">Faça a diferença</h2>
     <button class="btn btn-success" id="inicializador">Iniciar Quiz</i></button>
   </div>
 
