--- a/site2.0/html/index.html
+++ b/site2.0/html/index.html
@@ -24,8 +24,31 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
 </head>
 <body>
+  <!-- Nav bar-->
+  <ul id="navBar" class="nav">
+    <!-- dropdown -->
+    <li class="nav-item">
+      <div class="dropdown" id="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <i class="bi bi-justify"></i>
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+          <button class="dropdown-item" type="button" id="ir_objetivo"><i class="bi bi-calendar-check"></i> Objetivos</button>
+          <button class="dropdown-item" type="button" id="ir_pilares"><i class="bi bi-recycle"></i> Pilares</button>
+          <button class="dropdown-item" type="button" id="ir_equipe"><i class="bi bi-people-fill"></i> Equipe</button>
+          <button class="dropdown-item" type="button" id="ir_desenvolvedores"><i class="bi bi-person-bounding-box"></i> Desenvolvedores</button>
+        </div>
+      </div>
+    </li>
+    <!-- resto da nav bar -->
+    <li class="nav-item">
+      <a class="item_nav" href="https://www.instagram.com/greenlight.dev/"><i class="bi bi-instagram"></i></a>
+    </li>
+  </ul>
+
+
   <!-- Tela inicial -->
-  <div id="inicio">
+  <div id="inicio" onscroll="showPagePosition()">
     <p id="tInicio">Descubra seu impacto no meio ambiente,<br> <b>Calcule sua 
       Pegada Ecológica</b></p>
       <h1 id="tituloInicio">GreenLight</h1>
