--- a/site2.0/html/index.html
+++ b/site2.0/html/index.html
@@ -48,7 +48,7 @@
 
 
   <!-- Tela inicial -->
-  <div id="inicio" onscroll="showPagePosition()">
+  <div id="inicio">
     <p id="tInicio">Descubra seu impacto no meio ambiente,<br> <b>Calcule sua 
       Pegada Ecológica</b></p>
       <h1 id="tituloInicio">GreenLight</h1>
