--- a/site2.0/html/index.html
+++ b/site2.0/html/index.html
@@ -42,7 +42,7 @@
     </li>
     <!-- resto da nav bar -->
     <li class="nav-item">
-      <a class="item_nav" href="https://www.instagram.com/greenlight.dev/"><i class="bi bi-instagram"></i></a>
+      <a class="item_nav" href="https://www.instagram.com/greenlight.dev/"><i class="bi bi-instagram" id="instaVetor" style="color: #212529;"></i></a>
     </li>
   </ul>
 
