--- a/site2.0/html/resultado.html
+++ b/site2.0/html/resultado.html
@@ -1,196 +1,47 @@
-/* declaração de variaveis */
-:root{
-    --cor_caixa_titulo : #0CF25D;
-    --cor_titulo_resultado: #034159;
-    --cor_caixa_resultado : #025951;
-    --cor_caixa_geral : #034159;
-}
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Resultado</title>
+    <link rel="icon" href="../Imagens/Logosite.png">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">   
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-/* resto do código */
-#caixa_titulo{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 40%;
-    height: 30%;
-    background-color: var(--cor_caixa_titulo);
-}
+    <!-- importando fontes -->
+<!-- montserrat -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Roboto:wght@500&display=swap" rel="stylesheet">
 
-#titulo_resultado {
-    color: var(--cor_titulo_resultado);
-    position: absolute;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 7vh;
-    top: 40%;
-    left: 20%;
-}
+<!-- cabin -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cabin&family=Roboto:wght@700&display=swap" rel="stylesheet">
 
-#caixa_resultado{
-    position: fixed;
-    top: 30%;
-    left: 0;
-    width: 40%;
-    height: 70%;
-    background-color: var(--cor_caixa_resultado);
-}
-
-#imagem_fundo{
-    position: fixed;
-    top: 30%;
-    left: 0;
-    width: 40%;
-    height: 70%;
-    opacity: 12%;
-}
-
-#texto_resultado{
-    position: absolute;
-    font-family: 'Cabin', sans-serif;
-    font-size: 4vh;
-    color: var(--cor_caixa_titulo);
-    top: 5%;
-    left: 20%;
-}
-
-/* barra de progresso */
-
-.progress{
-    position: absolute;
-    bottom: 10%;
-    left: 0;
-    z-index: 2;
-}
-
-.progress:hover{
-    box-shadow: 0 0 5px var(--cor_caixa_titulo), 0 0 25px var(--cor_caixa_titulo), 0 0 50px var(--cor_caixa_titulo),
-     0 0 200px var(--cor_caixa_titulo);
-}
-
-#resultado{
-    position: absolute;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 15vh;
-    color: var(--cor_caixa_titulo);
-    top: 20%;
-    left: 39%;
-}
-
-#caixa_geral{
-    position: fixed;
-    top: 0;
-    left: 40%;
-    width: 60%;
-    height: 100%;
-    background-color: var(--cor_caixa_geral);
-}
-
-#texto_geral{
-    position: absolute;
-    font-family: 'Cabin', sans-serif;
-    font-size: 3vh;
-    color: aliceblue;
-    top: 20%;
-    left: 10%;
-    margin-right: 20px;
-}
-
-#dica{
-    position: absolute;
-    top: 80%;
-    font-family: 'Cabin', sans-serif;
-    font-size: 3vh;
-    color: var(--cor_caixa_resultado);
-    left: 4%;
-    text-decoration: underline;
-    cursor: pointer;
-}
-
-#ir_inicio{
-    position: absolute;
-    font-family: 'Cabin', sans-serif;
-    top: 56%;
-    right: 10%;
-    height: 90px;
-    width: 250px;
-    border: 0;
-    border-radius: 15px;
-    transition-duration: .2s;
-    cursor: pointer;
-}
-
-#ir_compartilhar{
-    position: absolute;
-    font-family: 'Cabin', sans-serif;
-    top: 71%;
-    right: 10%;
-    height: 90px;
-    width: 250px;
-    border: 0;
-    border-radius: 15px;
-    background-color: #31C1B0;
-    transition-duration: .2s;
-    cursor: pointer;
-}
-
-#ir_quiz{
-    position: absolute;
-    font-family: 'Cabin', sans-serif;
-    top: 86%;
-    right: 10%;
-    height: 90px;
-    width: 250px;
-    border: 0;
-    transition-duration: .2s;
-    border-radius: 15px;
-    background-color: var(--cor_caixa_titulo);
-    cursor: pointer;
-}
-
-#ir_inicio, #ir_quiz, #ir_compartilhar
-{
-    outline-style: dashed;
-    outline-width: 0px;
-}
-
-/* HOVER */
-
-#ir_inicio:hover, #ir_compartilhar:hover, #ir_quiz:hover
-{
-    outline-width: 5px;
-    outline-style: solid;
-}
-
-#ir_inicio:hover
-{
-    outline-color: #efefef;
-}
-
-#ir_compartilhar:hover
-{
-    outline-color: #31C1B0;
-}
-
-#ir_quiz:hover
-{
-    outline-color: var(--cor_caixa_titulo);
-}
-
-/* ACTIVE */
-
-#ir_inicio:active, #ir_compartilhar:active, #ir_quiz:active
-{
-    outline-style: none;
-}
-
-#ir_inicio:active{
-    background: #808080;
-    outline: 0;
-}
-
-#ir_compartilhar:active{
-    background-color: #248176;
-}
-
-#ir_quiz:active{
-    background-color: #630000;
-}
+</head>
+<body>
+    <div id="caixa_titulo">
+        <p id="titulo_resultado"></p>
+    </div>
+    <div id="caixa_resultado">
+        <img id="imagem_fundo">
+        <p id="texto_resultado">Sua pontuação foi...</p>
+        <p id="resultado"></p>
+        <div class="progress" style="height: 15px; width: 60%; left: 10%; border-radius: 0;">
+            <div class="progress-bar" id="barra_resultado" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+    </div>
+    <div id="caixa_geral">
+        <p id="texto_geral"></p>
+        <p id="dica">Quer uma dica?</p>
+        <button id="ir_inicio">Voltar ao Início</button>
+        <button id="ir_compartilhar">Compartilhar</button>
+        <button id="ir_quiz">Refazer Quiz</button>
+    </div>
+    <script src="../seletor_tela_resultado.js"></script>
+    <script src="../resultado.js"></script>
+</body>
+</html>
