--- a/site2.0/html/resultado.html
+++ b/site2.0/html/resultado.html
@@ -30,7 +30,7 @@
         <img id="imagem_fundo">
         <p id="texto_resultado">Sua pontuação foi...</p>
         <p id="resultado"></p>
-        <div class="progress" style="height: 15px; width: 60%; left: 10%; border-radius: 0;">
+        <div class="progress" style="height: 15px; width: 60%; left: 10%; border-radius: 20px;">
             <div class="progress-bar" id="barra_resultado" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
     </div>
