--- a/site2.0/html/resultado.html
+++ b/site2.0/html/resultado.html
@@ -38,6 +38,7 @@
         <p id="texto_geral"></p>
         <p id="dica">Quer uma dica?</p>
         <button id="ir_inicio">Voltar ao Início</button>
+        <button id="ir_mediaGlobal">Ver média</button>
         <button id="ir_quiz">Refazer Quiz</button>
     </div>
     <script src="../seletor_tela_resultado.js"></script>
