--- a/site2.0/html/quiz.html
+++ b/site2.0/html/quiz.html
@@ -1,11 +1,3 @@
-<?php
-require('../conexao_servidor.php');
-
-$stmt = $conn->prepare("SELECT * from tabelaecologica");
-$stmt->execute();
-$results1 = $stmt->fetchAll(PDO::FETCH_OBJ);
-
-?>
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -60,15 +52,10 @@ $results1 = $stmt->fetchAll(PDO::FETCH_OBJ);
 		<div class="navegacao">
 			<button id="prev">Anterior</button>
 			<button id="next">Próximo</button>
-			<button id="finalizar" class="enviarPesquisa" onclick="<?php inserirDados('valor_do_parametro'); ?>">Executar função</button>
+			<button id="finalizar" class="enviarPesquisa">Finalizar</button>
 		</div>
 	</div>
 	<script src="../quiz.js"></script>
 </body>
 </div>
 </html>
-<?php 
-function inserirDados(){
-	echo '<script>finalizar();</script>';
-}
-?>
