--- a/site2.0/html/index.html
+++ b/site2.0/html/index.html
@@ -88,7 +88,7 @@
     <div class="caixa_pilar" id="caixa2">
       <p class="titulo_caixa hidden">Importância</p>
       <img id="imagem_caixa" class="hidden" src="../Imagens/icons/Antivirus.png">
-      <p id="texto_caixa" >Reforçamos as pautas ambientais com nosso projeto. Realizamos um levantamento geral para melhor entendimento sobre o impacto no meio ambiente.</p>
+      <p id="texto_caixa" >Reforçamos as pautas ambientais com nosso projeto. Fazemos uma média geral para visualizar melhor o impacto no meio ambiente</p>
     </div>
     <div class="caixa_pilar" id="caixa3">
       <p class="titulo_caixa hidden">Energias Limpas</p>
@@ -98,7 +98,7 @@
     <div class="caixa_pilar" id="caixa4">
       <p class="titulo_caixa hidden">Reciclagem</p>
       <img id="imagem_caixa" class="hidden" src="../Imagens/icons/Reciclagem.png">
-      <p id="texto_caixa" >Com os 3Rs da sustentabilidade - reciclar, reduzir e reutilizar - é possível evitar o desperdício dos recursos naturais e diminuir a extração de máteria prima.</p>
+      <p id="texto_caixa" >Reciclar, Reduzir e Reutilizar. Através desses conceitos, é possível evitar desperdícios e mal uso dos recursos naturais</p>
     </div>
   </div>
   
