--- a/site2.0/html/index.html
+++ b/site2.0/html/index.html
@@ -49,6 +49,10 @@
     <li class="nav-item">
       <a class="nav-link" href="https://github.com/XaropinhoS20/PegadaEcologica"><i class="bi bi-github" id="githubVetor"></i></a>
     </li>
+
+    <li class="nav-item">
+      <a class="nav-link" href="https://www.linkedin.com/in/greenlight-pegada-ecol%C3%B3gica-925bb2273/"><i class="bi bi-linkedin" id="githubVetor"></i></a>
+    </li>
   </ul>
 
 
