--- a/site2.0/html/resultado.html
+++ b/site2.0/html/resultado.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resultado</title>
     <link rel="icon" href="../Imagens/Logosite.png">
+
+    <!-- bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">   
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 
     <!-- importando fontes -->
 <!-- montserrat -->
@@ -38,7 +41,7 @@
         <p id="texto_geral"></p>
         <p id="dica">Quer uma dica?</p>
         <button id="ir_inicio">Voltar ao Início</button>
-        <button id="ir_mediaGlobal">Ver média</button>
+        <button id="ir_mediaGlobal"><i  style="font-size: 15px;" class="bi bi-graph-up-arrow"></i> Ver média</button>
         <button id="ir_quiz">Refazer Quiz</button>
     </div>
     <script src="../seletor_tela_resultado.js"></script>
