--- a/site2.0/html/resultado.html
+++ b/site2.0/html/resultado.html
@@ -40,9 +40,8 @@
     <div id="caixa_geral">
         <p id="texto_geral"></p>
         <p id="dica">Quer uma dica?</p>
-        <button id="ir_inicio">Voltar ao Início</button>
+        <button id="ir_inicio"><i class="bi bi-globe-americas"></i> Voltar ao Início</button>
         <button id="ir_mediaGlobal"><i  style="font-size: 15px;" class="bi bi-graph-up-arrow"></i> Ver média</button>
-        <button id="ir_quiz">Refazer Quiz</button>
     </div>
     <script src="../seletor_tela_resultado.js"></script>
     <script src="../resultado.js"></script>
