--- a/site2.0/html/index.html
+++ b/site2.0/html/index.html
@@ -180,8 +180,7 @@
         <img class="card-img-top" src="../Imagens/fotos_desenvolvedores/foto_bernardo.png" alt="Imagem de capa do card">
         <div class="card-body">
           <h5 class="card-title">Bernardo Receputi</h5>
-          <p class="card-text">- QA tester</p>
-          <br>
+          <p class="card-text">- QA tester<br>- Social Media</p>
           <a href="https://www.linkedin.com/in/bernardo-receputi-da-costa-87304926b/" style="font-size: 30px;"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>  
@@ -194,8 +193,7 @@
         <img class="card-img-top" src="../Imagens/fotos_desenvolvedores/foto_vitor.png" alt="Imagem de capa do card">
         <div class="card-body">
           <h5 class="card-title">Vitor Viana</h5>
-          <p class="card-text">- QA tester</p>
-          <br>
+          <p class="card-text">- QA tester<br>- Social Media</p>
           <a href="https://www.linkedin.com/in/vitor-viana-33604a26b/" style="font-size: 30px;"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>      
