adicionado outro botão

--- a/site2.0/html/index.html
+++ b/site2.0/html/index.html
@@ -205,7 +205,7 @@
   <!-- Pagina quiz -->
   <div id="pagina_quiz" style="justify-content: center;">
     <p id="tFacaDiferenca">Descubra seu Impacto!!!</p>
-    <img id="seta_cima" src="../Imagens/icons/seta_cima.png">
+    <button id="seta_cima"><i class="bi bi-arrow-up"></i> Voltar ao Topo</button>
     <button class="btn" id="inicializador">Iniciar</button>
   </div>
 
