otimização e novo css
-removido css inutilizado
-criada a nova página
-alteração no botão continuar
entre outros

--- a/site2.0/html/index.html
+++ b/site2.0/html/index.html
@@ -9,12 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cabin&family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link rel="icon" href="../Imagens/logosite.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
     <!-- Animate.css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
@@ -153,7 +149,7 @@
           <img class="card-img-top" src="../Imagens/fotos_desenvolvedores/foto_giovanni.png" alt="Imagem de capa do card">
           <div class="card-body">
             <h5 class="card-title">Giovanni Almeida</h5>
-            <p class="card-text">- Designer<br>- Desenvolvedor full stack</p>
+            <p class="card-text">- Web Designer<br>- Desenvolvedor full stack</p>
             <a href="https://www.linkedin.com/in/giovanni-dos-santos-almeida-lombone-rodrigues-607a73209" style="font-size: 30px;"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>  
