--- a/site2.0/html/index.html
+++ b/site2.0/html/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GreenLight CSN</title>
+    <!-- Descrição do site e tags -->
+    <title>GreenLight: iluminando um futuro sustentável</title>
+    <meta name="description" content="Calcule sua Pegada Ecológica e descubra seu impacto no meio ambiente!">
+    <meta name="keywords" content="Pegada Ecológica,greenlight, Ecológico, sustentável, CSN, Educação Ambiental">
+    <!-- Assets -->
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
