--- a/site2.0/html/index.html
+++ b/site2.0/html/index.html
@@ -108,8 +108,8 @@
   
   <!-- Nossa equipe -->
   <div id="equipe">
-    <h2 style="color: #012030;" id="tNossaEquipe">Nossa Equipe</h2>
-    <div id="card">
+    <h2 style="color: #012030;" id="tNossaEquipe">Nossos Colaboradores</h2>
+    <!-- <div id="card">
       <img id="imagem_card" class="border border-primary">
       <div id="fundo_funcionalidade" class="border border-dark"><p id="funcionalidade"></p></div>
       <p id="texto_equipe"></p>
@@ -126,7 +126,40 @@
       <a id="site" class="bi bi-globe elemento" style="font-size: 40px; color: #012030;" href=""></a>
       <a id="linkedin" class="bi bi-linkedin elemento" style="font-size: 40px; color: #012030;" href=""></a>
       <a id="facebook" class="bi bi-facebook elemento" style="font-size: 40px; color: #012030;" href=""></a>
-    </div>
+    </div> -->
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img src="../Imagens/logos/cardFCSN.png" alt="Fundação CSN" style="max-width:390px;height:200px; width: auto;">
+            </div>
+            <div class="flip-card-back">
+              <p>Fundação CSN</p>
+              <p>Somos responsáveis pelas ações sociais do Grupo CSN. Os pilares que sustentam a nossa atuação são educação, cultura, articulação e curadoria.</p>
+            </div>
+          </div>
+      </div>
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="../Imagens/logos/cardETPC.png" alt="ETPC" style="max-width:390px;height:200px; width: auto;">
+          </div>
+          <div class="flip-card-back">
+            <p>Escola Técnica Pandiá Calógeras</p>
+            <p>Fundada em 1944 visando oferecer ensino técnico aos primeiros empregados da Companhia Siderúrgica Nacional, é referência nacional em educação para o trabalho, atualização tecnológica e investimento social.</p>
+          </div>
+        </div>
+      </div>
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="../Imagens/logos/cardPEA.png" alt="PEA" style="max-width:390px;height:200px; width: auto;">
+          </div>
+          <div class="flip-card-back">
+            <p>Programa de Educação Ambiental</p>
+            <p>Temos o objetivo de promover a educação ambiental junto à população. Visando o conhecimento ecológico necessário para a proteção e preservação ambiental.</p>
+          </div>
+        </div>
+      </div>
   </div>
   
   <!-- Desenvolvedores -->
