--- a/site2.0/html/index.html
+++ b/site2.0/html/index.html
@@ -127,39 +127,42 @@
       <a id="linkedin" class="bi bi-linkedin elemento" style="font-size: 40px; color: #012030;" href=""></a>
       <a id="facebook" class="bi bi-facebook elemento" style="font-size: 40px; color: #012030;" href=""></a>
     </div> -->
-        <div class="flip-card">
-          <div class="flip-card-inner">
-            <div class="flip-card-front">
-              <img src="../Imagens/logos/cardFCSN.png" alt="Fundação CSN" style="max-width:390px;height:200px; width: auto;">
-            </div>
-            <div class="flip-card-back">
-              <p>Fundação CSN</p>
-              <p>Somos responsáveis pelas ações sociais do Grupo CSN. Os pilares que sustentam a nossa atuação são educação, cultura, articulação e curadoria.</p>
-            </div>
-          </div>
-      </div>
+    <div class="container">
+
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="../Imagens/logos/cardETPC.png" alt="ETPC" style="max-width:390px;height:200px; width: auto;">
+            <img src="../Imagens/logos/cardFCSN.png" alt="Fundação CSN" style="max-width: 100%;height:200px; ">
           </div>
           <div class="flip-card-back">
-            <p>Escola Técnica Pandiá Calógeras</p>
-            <p>Fundada em 1944 visando oferecer ensino técnico aos primeiros empregados da Companhia Siderúrgica Nacional, é referência nacional em educação para o trabalho, atualização tecnológica e investimento social.</p>
+            <p class="txtCard"><b>Fundação CSN</b></p>
+            <p class="txtCard">Somos responsáveis pelas ações sociais do Grupo CSN. Os pilares que sustentam a nossa atuação são educação, cultura, articulação e curadoria.</p>
           </div>
         </div>
-      </div>
-      <div class="flip-card">
-        <div class="flip-card-inner">
-          <div class="flip-card-front">
-            <img src="../Imagens/logos/cardPEA.png" alt="PEA" style="max-width:390px;height:200px; width: auto;">
-          </div>
-          <div class="flip-card-back">
-            <p>Programa de Educação Ambiental</p>
-            <p>Temos o objetivo de promover a educação ambiental junto à população. Visando o conhecimento ecológico necessário para a proteção e preservação ambiental.</p>
-          </div>
+    </div>
+    <div class="flip-card">
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <img src="../Imagens/logos/cardETPC.png" alt="ETPC" style="max-width: 100%;height:200px;">
+        </div>
+        <div class="flip-card-back">
+          <p class="txtCard"><b>Escola Técnica Pandiá Calógeras</b></p>
+          <p class="txtCard">Fundada em 1944 visando oferecer ensino técnico aos primeiros empregados da Companhia Siderúrgica Nacional, é referência nacional em educação para o trabalho, atualização tecnológica e investimento social.</p>
         </div>
       </div>
+    </div>
+    <div class="flip-card">
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <img src="../Imagens/logos/cardPEA.png" alt="PEA" style="max-width: 100%;height:200px;">
+        </div>
+        <div class="flip-card-back">
+          <p class="txtCard"><b>Programa de Educação Ambiental</b></p>
+          <p class="txtCard">Temos o objetivo de promover a educação ambiental junto à população. Visando o conhecimento ecológico necessário para a proteção e preservação ambiental.</p>
+        </div>
+      </div>
+    </div>
+    </div>
   </div>
   
   <!-- Desenvolvedores -->
