adicionando html para remover cache

--- a/site2.0/html/index.html
+++ b/site2.0/html/index.html
@@ -8,6 +8,12 @@
     <title>GreenLight: iluminando um futuro sustentável</title>
     <meta name="description" content="Calcule sua Pegada Ecológica e descubra seu impacto no meio ambiente!">
     <meta name="keywords" content="Pegada Ecológica,greenlight, Ecológico, sustentável, CSN, Educação Ambiental">
+    <meta
+    http-equiv="Cache-Control"
+    content="no-cache, no-store, must-revalidate"
+    />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <!-- Assets -->
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
