cards dinamicos removidos

--- a/site2.0/html/index.html
+++ b/site2.0/html/index.html
@@ -15,15 +15,12 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <!-- Assets -->
+    <link rel="icon" href="../Imagens/logosite.png">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cabin&family=Montserrat:wght@500&display=swap" rel="stylesheet">
-    <link rel="icon" href="../Imagens/logosite.png">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
-    <!-- Animate.css -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!--Bootstrap-->
 	  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">   
@@ -115,7 +112,7 @@
   <!-- Nossa equipe -->
   <div id="equipe">
     <h2 style="color: #012030;" id="tNossaEquipe">Nossos Colaboradores</h2>
-    <!-- <div id="card">
+    <div id="card">
       <img id="imagem_card" class="border border-primary">
       <div id="fundo_funcionalidade" class="border border-dark"><p id="funcionalidade"></p></div>
       <p id="texto_equipe"></p>
@@ -132,7 +129,8 @@
       <a id="site" class="bi bi-globe elemento" style="font-size: 40px; color: #012030;" href=""></a>
       <a id="linkedin" class="bi bi-linkedin elemento" style="font-size: 40px; color: #012030;" href=""></a>
       <a id="facebook" class="bi bi-facebook elemento" style="font-size: 40px; color: #012030;" href=""></a>
-    </div> -->
+    </div>
+    <!--
     <div class="container">
 
       <div class="flip-card">
@@ -168,7 +166,7 @@
         </div>
       </div>
     </div>
-    </div>
+    </div> -->
   </div>
   
   <!-- Desenvolvedores -->
