nova alteração na tela de resultado dados

--- a/site2.0/html/react_resultadoDados/src/index.html
+++ b/site2.0/html/react_resultadoDados/src/index.html
@@ -37,27 +37,46 @@
 
         .barra {
             display: block;
-            position: relative; /* Adicione esta propriedade para criar um contexto de posicionamento para os elementos filhos */
+            position: relative; 
         }
 
-        .barra_porcentagem {
+        .barra_total {
             width: 70%;
             height: 30px;
             background-color: red;
-            position: absolute; /* Defina a posição como absolute */
-            top: 0; /* Ajuste a posição superior conforme necessário */
+            position: absolute; 
+            top: 0; 
         }
 
-        .barra_texto {
+        .barra_porcentagem {
             height: 30px;
             background-color: gray;
-            position: absolute; /* Defina a posição como absolute */
-            top: 0; /* Ajuste a posição superior conforme necessário */
+            position: absolute; 
+            top: 0; 
         }
 
         .texto_barra {
-            position: absolute; /* Defina a posição como absolute */
-            top: 0; /* Ajuste a posição superior conforme necessário */
+            position: absolute; 
+            top: 0; 
+        }
+        /* --------------------------- */ 
+        .barra_coluna {
+            display: block;
+        }
+
+        .barra_total_coluna {
+            width: 10%;
+            height: 90px;
+            background-color: red;
+        }
+
+        .barra_porcentagem_coluna {
+            width: 10%;
+            background-color: gray;
+        }
+
+        .texto_barra_coluna {
+            
         }
     </style>
 </body>
