fiz melhorias de otimização, além de por o campo data

--- a/site2.0/html/react_resultadoDados/src/index.html
+++ b/site2.0/html/react_resultadoDados/src/index.html
@@ -84,10 +84,21 @@ h1, span
 
 #secao-3
 {
-    margin-top: 18%;
+    margin-top: 9%;
 }
 
 /* putaria começa daqui pra baixo */
+
+#filtro{
+    margin-bottom: 9%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.texto_filtrar{
+    margin-right: 1%;
+}
 
 .box-questao
 {
