--- a/site2.0/html/react_resultadoDados/src/index.html
+++ b/site2.0/html/react_resultadoDados/src/index.html
@@ -62,7 +62,7 @@ h1, span
     text-align: center;
     margin-bottom: 20%;
     padding-top: 15%;
-    background-image: linear-gradient(360deg,rgba(242, 242, 242, 1) 5%,rgba(242, 242, 242, .5) 95%), url("../../../Imagens/grama.jpg");
+    background-image: linear-gradient(360deg,rgba(242, 242, 242, 1) 5%,rgba(242, 242, 242, .5) 95%), url("../../../Imagens/imagens_fundo/FundoEx.png");
 }
 
 #secao-1 p:last-child
@@ -113,7 +113,7 @@ h1, span
     font-size: x-large;
     font-weight: 400;
     display: flex;
-    width: 4rem;
+    min-width: 4rem;
     height: 5rem;
     justify-content: center;
     align-items: center;
@@ -165,6 +165,15 @@ h1, span
     margin: 0;
     z-index: -1;
     height: 100%;
+}
+
+#secao-3 p:last-child
+{
+        font-size:medium;
+        width: 50%;
+        margin: auto;
+        text-align: center;
+        margin-bottom: 20%;
 }
 
 @media only screen and (max-width: 500px) 
