--- a/site2.0/html/react_resultadoDados/resultadoDados/index.html
+++ b/site2.0/html/react_resultadoDados/resultadoDados/index.html
@@ -300,6 +300,11 @@ footer
         margin-bottom: 20%;
     }
 
+    .box-questao
+    {
+        margin-bottom: 35%;
+    }
+
     footer
     {
         flex-direction: column;
