--- a/site2.0/html/test.html
+++ b/site2.0/html/test.html
@@ -76,13 +76,12 @@
                 <h3>Como Acessar o JSON?</h3>
                 <details>
                     <summary><h4>Método 1</h4></summary>
-                    Acessando a média de todos os dias:
-                    <a>https://greenlight.dev.br/html/resultadoDados.php</a>
+                    Acessando a <a href="https://greenlight.dev.br/html/resultadoDados.php">média de todos os dias</a>
                 </details>
                 <details>
                     <summary><h4>Método 2</h4></summary>
-                    Acessando uma <i>data específica:</i>
-                    <a>https://greenlight.dev.br/html/resultadoDados.php?data=<b>data-especifica</b>&data2=<b>segunda-data-especifica</b></a>
+                    Acessando uma <i>data específica:</i><br>
+                    <code>https://greenlight.dev.br/html/resultadoDados.php?data=<b>data-especifica</b>&data2=<b>segunda-data-especifica</b></code>
                 </details>
                 <button data-close-modal>
                     <span></span>
@@ -118,8 +117,9 @@
             <a href="https://github.com/XaropinhoS20/PegadaEcologica"><i class="bi bi-github"></i></a=>
             <a href="https://www.linkedin.com/in/greenlight-pegada-ecol%C3%B3gica-925bb2273/"><i class="bi bi-linkedin"></i></a=>
         </div>
-        <a href="">Sobre nós</a>
-        <a href="">Colaboradores</a>
+        <a href=""><i>Sobre nós</i></a>
+        <a href=""><i>Colaboradores</i></a>
+        <a href="https://www.freepik.com" title="Créditos das imagens contidas nesse site"><i>Designed by Freepik</i></a>
     </footer>
 </body>
 </html>
