ajustes e atualizações na build

--- a/site2.0/html/react_resultadoDados/src/index.html
+++ b/site2.0/html/react_resultadoDados/src/index.html
@@ -110,6 +110,15 @@ h1, span
     margin-top: 8px;
 }
 
+#opcao-ocupacao
+{
+    cursor: pointer;
+    border-radius: 5px;
+    min-width: 15%;
+    height: 35px;
+    /* margin-top: 8px; */
+}
+
 input
 {
     margin-bottom: 9%;
