--- a/site2.0/html/index.html
+++ b/site2.0/html/index.html
@@ -23,7 +23,7 @@
 <body>
     <header>
         <nav>
-            <a class="nav-link" href="#">Sobre nós (Em Manutenção)</a>
+            <a class="nav-link" href="#">Sobre nós (Em Breve)</a>
         </nav>
         <div id="elementos-principais">
             <div id="header-main-content">
@@ -139,7 +139,7 @@
             <a href="https://github.com/XaropinhoS20/PegadaEcologica"><i class="bi bi-github"></i></a=>
             <a href="https://www.linkedin.com/in/greenlight-pegada-ecol%C3%B3gica-925bb2273/"><i class="bi bi-linkedin"></i></a=>
         </div>
-        <a href="#"><i>Sobre nós (Em Manutenção)</i></a>
+        <a href="#"><i>Sobre nós (Em Breve)</i></a>
         <a href="https://www.freepik.com" title="Créditos das imagens contidas nesse site"><i>Designed by Freepik</i></a>
     </footer>
 </body>
