--- a/site2.0/html/resultado.html
+++ b/site2.0/html/resultado.html
@@ -12,6 +12,7 @@
     <meta http-equiv="Expires" content="0" />
     <title>Resultado</title>
     <link rel="icon" href="../Imagens/logosite.png">
+    <link rel="stylesheet" href="../css/resultado.css">
 
     <!-- Importando Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">   
@@ -29,24 +30,26 @@
 
 </head>
 <body>
-    <div id="caixa_titulo">
-        <p id="titulo_resultado"></p>
-    </div>
-    <div id="caixa_resultado">
-        <img id="imagem_fundo">
-        <p id="texto_resultado">Sua pontuação foi...</p>
-        <p id="resultado"></p>
-        <div class="progress" style="height: 15px; width: 60%; left: 10%; border-radius: 20px;">
-            <div class="progress-bar" id="barra_resultado" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+    <aside>
+        <div id="caixa_titulo">
+            <p id="titulo_resultado"></p>
         </div>
-    </div>
-    <div id="caixa_geral">
-        <p id="texto_geral"></p>
+        <div id="caixa_resultado">
+            <p id="texto_resultado">Sua pontuação foi...</p>
+            <p id="resultado"></p>
+            <div class="progress" style="height: 15px; width: 60%; left: 10%; border-radius: 20px;">
+                <div class="progress-bar" id="barra_resultado" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <img id="imagem_fundo"> 
+        </div>
+    </aside>
+    <div id="caixa_geral">  
+        <p id="texto_geral"></p>    
         <p id="dica">Quer uma dica?</p>
         <button id="ir_inicio"><i class="bi bi-globe-americas"></i> Voltar ao Início</button>
         <button id="ir_mediaGlobal"><i  style="font-size: 15px;" class="bi bi-graph-up-arrow"></i> Ver média</button>
     </div>
-    <script src="../seletor_tela_resultado.js"></script>
+    <!-- <script src="../seletor_tela_resultado.js"></script> -->
     <script src="../resultado.js"></script>
 </body>
 </html>
