ícone antigo removido

--- a/site2.0/html/index.html
+++ b/site2.0/html/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <link rel="icon" href="../Imagens/logosite.png">
+    <link rel="icon" href="../Imagens/icons/favicon.ico">
     
     <!-- informações gerais e sistema de busca -->
-    <title>GREENLIGHT</title>
+    <title>Início</title>
     <meta name="description" content="Calcule sua Pegada Ecológica e descubra seu impacto no meio ambiente!">
     <meta name="keywords" content="Pegada Ecológica,greenlight, Ecológico, sustentável, CSN, Educação Ambiental, PEA CSN Pegada">
 
