--- a/site2.0/html/quiz.html
+++ b/site2.0/html/quiz.html
@@ -18,7 +18,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 	<!--imagens-->
-	<link rel="icon" href="../Imagens/interrogacao.png">
+	<link rel="icon" href="../Imagens/icons/favicon.ico">
 
 	<!--Fontes-->
 	<link rel="stylesheet" href="../css/quiz.css">
