--- a/site2.0/html/resultado.html
+++ b/site2.0/html/resultado.html
@@ -11,7 +11,7 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <title>Resultado</title>
-    <link rel="icon" href="../Imagens/logosite.png">
+    <link rel="icon" href="../Imagens/icons/favicon.ico">
     <link rel="stylesheet" href="../css/resultado.css">
 
     <!-- Importando Bootstrap -->
